--- a/playbooks/roles/ais_deploy_cluster/tasks/main.yml
+++ b/playbooks/roles/ais_deploy_cluster/tasks/main.yml
@@ -46,6 +46,10 @@
   register: namespaceout
   changed_when: "'created' in namespaceout.stdout"
 
+- name: Debug hostname list var
+  debug:
+    var: hostname_list
+
 - name: Deploy cluster
   command: "kubectl apply -f /tmp/{{ cluster }}.yaml"
   register: createout
