--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -4,19 +4,19 @@ on:
   push:
     tags:
       - "v*.*"
-      - "v*.*.*"
 env:
-  AISOPERATOR_IMAGE: 'aistorage/ais-operator'
+  AISOPERATOR_IMAGE: 'gaikwadabhishek/ais-operator'
+  VERSION: ${{ github.event.release.tag_name }}
 
 jobs:
-  docker:
+  release:
     runs-on: ubuntu-22.04
     steps:
 
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
-        go-version: '>=1.20.0'
+        go-version: '>=1.21.0'
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
@@ -26,17 +26,16 @@ jobs:
     - name: make aisoperator image
       run: |
         pushd $GITHUB_WORKSPACE/operator
-        IMG="${{ env.AISOPERATOR_IMAGE }}:${{ inputs.version }}" make docker-build docker-push
+        IMG="${{ env.AISOPERATOR_IMAGE }}:${{ env.VERSION }}" make docker-build docker-push
         popd
-    
+  
     - name: make operator yaml file
       run: |
         pushd $GITHUB_WORKSPACE/operator
-        VERSION="${{ inputs.version }}" IMG="${{ env.AISOPERATOR_IMAGE }}:${{ inputs.version }}" make bundle-manifests
+        VERSION="${{ env.VERSION }}" IMG="${{ env.AISOPERATOR_IMAGE }}:${{ env.VERSION }}" make bundle-manifests
         popd
 
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: operator/dist/*
