--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -2,8 +2,10 @@ name: Publish ais-k8s release
 
 on:
   push:
+    branches:
+      - '**'
     tags:
-      - '*'
+      - 'v*'
 
 env:
   AISOPERATOR_IMAGE: 'gaikwadabhishek/ais-operator'
